--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
     "serve-favicon": "^2.0.1",
