--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "prop-types": "^15.5.10",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-parallax": "^1.6.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-validation": "^3.0.7",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
+    "redux-promise-middleware": "^5.0.0",
     "serve-favicon": "^2.0.1",
     "webpack": "^3.6.0"
   },
@@ -50,7 +53,7 @@
     "eslint-plugin-lodash-fp": "^2.1.3",
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.11.2",
-    "less": "^2.7.1",
+    "less": "^2.7.3",
     "less-plugin-autoprefix": "^1.5.1",
     "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.6.0",
