--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
+    "redux-promise-middleware": "^5.0.0",
     "serve-favicon": "^2.0.1",
     "webpack": "^3.6.0"
   },
