--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.0.1",
+    "thunk": "0.0.1",
     "webpack": "^3.6.0"
   },
   "devDependencies": {
