--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-devtools": "^3.4.0",
     "redux-promise-middleware": "^5.0.0",
     "serve-favicon": "^2.0.1",
+    "thunk": "0.0.1",
     "webpack": "^3.6.0"
   },
   "devDependencies": {
