--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
     "redux-promise-middleware": "^5.0.0",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.0.1",
-    "thunk": "0.0.1",
     "webpack": "^3.6.0"
   },
   "devDependencies": {
